unpackaged/main/default/objects/UPass_SSO_Settings__mdt/UPass_SSO_Settings__mdt.object-meta.xml
<CustomObject>
    <label>UPass SSO Settings</label>
    <pluralLabel>UPass SSO Settings</pluralLabel>
</CustomObject>