unpackaged/main/default/objects/UPass_SSO_Settings__mdt/fields/Access_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Url__c</fullName>
    <label>Access Token Url</label>
    <type>Url</type>
</CustomField>