unpackaged/main/default/objects/UPass_SSO_Settings__mdt/fields/API_User_Url__c.field-meta.xml
<CustomField>
    <fullName>API_User_Url__c</fullName>
    <label>API User Url</label>
    <type>Url</type>
</CustomField>