unpackaged/main/default/objects/UPass_SSO_Settings__mdt/fields/Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>Auth_URL__c</fullName>
    <label>Auth URL</label>
    <type>Url</type>
</CustomField>