unpackaged/main/default/objects/UPass_SSO_Settings__mdt/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>